--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco009/cumco009.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco009/cumco009.component.html
@@ -1,4 +1,4 @@
-<div class="ui-fluid">
+<div class="ui-fluid"> 
   <p-toast position="top-center"></p-toast>
   <p-fieldset legend="{{ 'CUMCO009.titulo' | translate }}">
     <p>
@@ -10,7 +10,7 @@
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
           <p-autoComplete [(ngModel)]="filtroTipoPersona" field="idDescripcion" [suggestions]="tablaPersonasFiltro" (completeMethod)="searchPersona($event)"
           [dropdown]="true" placeholder="{{ 'CUMCO009.FILTROS.filtrotituloPersonaPlaceHolder' | translate }}"
-           (onSelect) = "seleccion()"></p-autoComplete>
+          (onSelect)="selectTipoPersonaFilter($event)" (focusout)="focusOutFiltroPersona()"></p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompletePersona()"></p-button>
         </div>
       </div>
@@ -21,6 +21,7 @@
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
           <p-autoComplete [(ngModel)]="filtroTipoIdentificacion" field="idDescripcion" [suggestions]="tablaIdentificacionFiltro" (completeMethod)="searchTipoIdentificacion($event)"
+          (onSelect)="selectIdetnfificacionFilter($event)" (focusout)="focusOutFiltroTipoIdentificacion()"
           [dropdown]="true" placeholder="{{ 'CUMCO009.FILTROS.filtrotituloIdentificacionPlaceHolder' | translate }}" ></p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteIdentificacion()"></p-button>
         </div>
@@ -33,7 +34,17 @@
     
     <p-messages [(value)]="msgs"></p-messages>
 
-    <p-table [columns]="columnasAdjuntos" [value]="tablaPersonas" [(selection)]="seleccionPersona" selectionMode="single" (onRowSelect)="rowSelect()" (onRowUnselect)="rowSelect()">
+    <p-table [columns]="columnasAdjuntos" [value]="tablaPersonas" [paginator]="true" [rows]="nRowsTable1" [rowsPerPageOptions]="nRowsOptionsTable1"
+      [(selection)]="seleccionPersona" selectionMode="single" (onRowSelect)="rowSelect()" (onRowUnselect)="rowSelect()">
+
+      <!-- Table Column Width -->
+      <ng-template pTemplate="colgroup" let-columns>
+        <colgroup>
+          <col style="width:5%"> 
+        </colgroup>
+      </ng-template>
+
+
       <ng-template pTemplate="caption">
         <div class="ui-helper-clearfix menu-sup-grid">
           <div class="button-sup-grid">
@@ -41,20 +52,24 @@
           </div>
         </div>
       </ng-template>
-      <ng-template pTemplate="header" let-columns>
+
+       <!-- Table Heardes -->
+       <ng-template pTemplate="header" let-columns>
         <tr>
-          <th *ngFor="let col of columns">
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
             {{col.header}}
+            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
           </th>
         </tr>
       </ng-template>
+
       <ng-template pTemplate="body" let-row let-rowData let-columns="columns" let-rowIndex="rowIndex">
         <tr [pSelectableRow]="rowData" [pSelectableRowIndex]="rowIndex"
-        *ngIf="(filtroTipoPersona === undefined || filtroTipoPersona.id === row.id)">
+        *ngIf="(filtroTipoPersona === undefined || filtroTipoPersona.id === row.id)" [ngStyle]="gteRowColorState(row)">
           <td pEditableColumn *ngFor="let col of columns; let i = index" [attr.data-index]="i">
 
             <div [ngSwitch]="i">
-              <div *ngSwitchCase="0"> {{rowIndex}} </div>
+              <div *ngSwitchCase="0"> {{rowIndex + 1 }} </div>
               <div *ngSwitchCase="1">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
@@ -78,7 +93,7 @@
               <div *ngSwitchCase="3">
                   <p-cellEditor>
                     <ng-template pTemplate="input">
-                      <input type="text" [(ngModel)]="row.descripcion" [maxlength]="200" (focusout) = "editedPerson(rowIndex)" (keydown.enter)= "editedPerson(rowIndex)">
+                      <input type="text" [(ngModel)]="row.descripcion" [maxlength]="200" (focusout)="editedPerson(rowIndex)" (keydown.enter)="editedPerson(rowIndex)">
                     </ng-template>
                     <ng-template pTemplate="output">
                       {{row.descripcion}}
@@ -104,56 +119,73 @@
 
     <p-messages [(value)]="msgs2"></p-messages>
 
-    <p-table [columns]="columnasAdjuntosComunicacion" [value]="rows" [(selection)]="seleccionConfiguracion" [paginator]="true" [rowsPerPageOptions]="[5,10,20]" [rows]="10" selectionMode="single" showCurrentPageReport="true"
+    <p-table [columns]="columnasAdjuntosComunicacion" [value]="rows" [(selection)]="seleccionConfiguracion" [paginator]="true" [rowsPerPageOptions]="nRowsOptionsTable2" [rows]="nRowsTable2" selectionMode="single" showCurrentPageReport="true"
       currentPageReportTemplate="Page {currentPage} of {totalPages}">
+
+      <!-- Table Column Width -->
+      <ng-template pTemplate="colgroup" let-columns>
+        <colgroup>
+          <col style="width:5%"> 
+        </colgroup>
+      </ng-template>
+
       <ng-template pTemplate="caption">
         <div class="ui-helper-clearfix menu-sup-grid">
           <div class="button-sup-grid">
-            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="agregarClick()"></p-button>
-            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="eliminarClick()"></p-button>
-            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onGuardarConfiguracion()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="agregarClick()" [disabled]="seleccionPersona === undefined"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="eliminarClick()" [disabled]="seleccionPersona === undefined"></p-button>
+            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onGuardarConfiguracion()" [disabled]="seleccionPersona === undefined"></p-button>
           </div>
         </div>
       </ng-template>
-      <ng-template pTemplate="header" let-columns>
+
+
+       <!-- Table Heardes -->
+       <ng-template pTemplate="header" let-columns>
         <tr>
-          <th *ngFor="let col of columns">
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
             {{col.header}}
+            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
           </th>
         </tr>
       </ng-template>
+
+
+      
       <ng-template pTemplate="body" let-row let-rowData let-columns="columns" let-rowIndex="rowIndex">
         <tr [pSelectableRow]="row" [pSelectableRowIndex]="rowIndex"
-        [ngStyle]="gteRowColorState(row)"
-        *ngIf="(filtroTipoIdentificacion === undefined || filtroTipoIdentificacion.id === row.id)">
+        [ngStyle]="gteRowColorState(row)">
           <td pEditableColumn *ngFor="let col of columns; let i = index" [attr.data-index]="i">
 
             <div [ngSwitch]="i">
-              <div *ngSwitchCase="0"> {{rowIndex}}</div>
+              <div *ngSwitchCase="0"> {{rowIndex + 1 }} </div>
+
               <div *ngSwitchCase="1">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
-                    <input type="text" [(ngModel)]="row.tipoPersona.nombreTipoPersona" [disabled]= "true">
+                    <input type="text" [(ngModel)]="row.tipoPersona.nombreTipoPersona" [disabled]="true">
                   </ng-template>
                   <ng-template pTemplate="output">
                     {{row.tipoPersona.nombreTipoPersona}}
                   </ng-template>
                 </p-cellEditor>
               </div>
+
               <div *ngSwitchCase="2">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
-                    <input type="text" [(ngModel)]="row.id">
+                    <input type="text" [(ngModel)]="row.id" [disabled]="true">
                   </ng-template>
                   <ng-template pTemplate="output">
                     {{row.id}}
                   </ng-template>
                 </p-cellEditor>
               </div>
+
               <div *ngSwitchCase="3">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
-                    <input type="text" [(ngModel)]="row.descripcion" [maxlength]="50"
+                    <input type="text" [(ngModel)]="row.descripcion" [maxlength]="50" [disabled]="row.state === 'delete' "
                      (focusout)="editedIdentification(rowIndex, $event)" (keydown.enter)="editedIdentification(rowIndex, $event)" [disabled]="row.editable === 0">
                   </ng-template>
                   <ng-template pTemplate="output">
