--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.html
@@ -1,4 +1,4 @@
-<div class="ui-fluid">
+<div class="ui-fluid"> 
   <p-toast position="top-center"></p-toast>
   <p-fieldset legend="{{ 'CUMCO010.titulo' | translate }}">
     <p>
@@ -8,6 +8,7 @@
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <p-autoComplete [(ngModel)]="seleccionFiltro" field="descripcion" [suggestions]="filtroDevolucion" (completeMethod)="searchDevolucion($event)"
+          (onSelect)="selectDevolucionFiltro($event)" (focusout)="focusOutFiltroDevolucion()"
           [dropdown]="true" placeholder="{{ 'CUMCO010.FILTROS.filtroTituloDevolucionPlaceHolder' | translate }}"
           ></p-autoComplete>
           <p-button icon="pi pi-times" (click)="borrarFiltro()"></p-button>
@@ -20,8 +21,17 @@
 
     <p-messages [(value)]="msgs"></p-messages>
 
-    <p-table [columns]="columnasAdjuntos" [value]="rows" [(selection)]="seleccionDevolucion" [paginator]="true" [rowsPerPageOptions]="[5,10,20]" [rows]="10" selectionMode="single" showCurrentPageReport="true"
+    <p-table [columns]="columnasAdjuntos" [value]="rows" [(selection)]="seleccionDevolucion" [paginator]="true" [rowsPerPageOptions]="nRowsOptionsTable1" [rows]="nRowsTable1" selectionMode="single" showCurrentPageReport="true"
       currentPageReportTemplate="Page {currentPage} of {totalPages}">
+
+      <!-- Table Column Width -->
+      <ng-template pTemplate="colgroup" let-columns>
+        <colgroup>
+          <col style="width:5%"> 
+        </colgroup>
+      </ng-template>
+
+      
       <ng-template pTemplate="caption">
         <div class="ui-helper-clearfix menu-sup-grid">
           <div class="button-sup-grid">
@@ -31,21 +41,26 @@
           </div>
         </div>
       </ng-template>
+
+      <!-- Table Heardes -->
       <ng-template pTemplate="header" let-columns>
         <tr>
-          <th *ngFor="let col of columns">
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
             {{col.header}}
+            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
           </th>
         </tr>
       </ng-template>
+
       <ng-template pTemplate="body" let-row let-rowData let-columns="columns" let-rowIndex="rowIndex">
         <tr [pSelectableRow]="row" [pSelectableRowIndex]="rowIndex"
-        [ngStyle]="gteRowColorState(row)"
-        *ngIf="(seleccionFiltro === undefined || seleccionFiltro.id === row.id) || (row.state === 'new')">
+        [ngStyle]="gteRowColorState(row)">
           <td pEditableColumn *ngFor="let col of columns; let i = index" [attr.data-index]="i">
 
             <div [ngSwitch]="i">
-              <div *ngSwitchCase="0"> {{rowIndex}}</div>
+
+              <div *ngSwitchCase="0"> {{rowIndex + 1 }}</div>
+
               <div *ngSwitchCase="1">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
@@ -56,8 +71,9 @@
                   </ng-template>
                 </p-cellEditor>
               </div>
+
               <div *ngSwitchCase="2" style="text-align: center">
-                <p-checkbox name="groupname" [(ngModel)]="row.activo" binary="true" (onChange)="onChangeActivo(rowIndex)"></p-checkbox>
+                <p-checkbox name="groupname" [(ngModel)]="row.activo" binary="true" (onChange)="onChangeActivo(rowIndex)" (ngModelChange)="row.activo = $event ? 1 : 0"></p-checkbox>
               </div>
             </div>
 
